Updates   * Added option to set sync logs to docker-sync start cmd   * Added cache option to core and tap builds     * Setting to false will build the images without cache  * Added default GIT_KEY to Dockerfiles  * Removed copy of yarn lock from Dockerfiles  * Updated added exposed ports to the docker files

--- a/containers/components/Dockerfile
+++ b/containers/components/Dockerfile
@@ -67,6 +67,9 @@ ARG KEG_DOCKER_IP
 # Will use the ip address of the docker container.
 ENV REACT_NATIVE_PACKAGER_HOSTNAME $KEG_DOCKER_IP
 
+# Set GIT_KEY to be empty value so yarn install doesn't fail
+ENV GIT_KEY=""
+
 # Install git for the new stage
 RUN apk add --no-cache git
 
@@ -82,9 +85,12 @@ COPY --from=builder $DOC_APP_PATH $DOC_APP_PATH
 # Copy over keg cli from above
 COPY --from=builder $NM_CACHE $NM_CACHE
 
-# Expose the default http and https ports
+# Expose container ports
 EXPOSE 80
 EXPOSE 443
+EXPOSE 19002
+EXPOSE 19006
+EXPOSE 60710
 
 # Set the current directory to keg-core repo
 WORKDIR /$DOC_APP_PATH
