--- a/containers/tap/Dockerfile
+++ b/containers/tap/Dockerfile
@@ -28,7 +28,6 @@ RUN git config --global url.https://$GIT_KEY@github.com/.insteadOf https://githu
 
 # Copy over the package.json, and yarn.lock files
 COPY package.json $NM_CACHE/
-COPY yarn.lock $NM_CACHE/
 
 # Install the dependecies with yarn setup, then remove the .npmrc
 RUN cd $NM_CACHE; \
@@ -61,6 +60,9 @@ ARG KEG_DOCKER_IP
 # Will use the ip address of the docker container.
 ENV REACT_NATIVE_PACKAGER_HOSTNAME $KEG_DOCKER_IP
 
+# Set GIT_KEY to be empty value so yarn install doesn't fail
+ENV GIT_KEY=""
+
 # Install git for the new stage
 RUN apk add --no-cache git
 
@@ -76,9 +78,12 @@ COPY --from=builder $DOC_APP_PATH $DOC_APP_PATH
 # Copy over keg cli from above
 COPY --from=builder $NM_CACHE $NM_CACHE
 
-# Expose the default http and https ports
+# Expose container ports
 EXPOSE 80
 EXPOSE 443
+EXPOSE 19002
+EXPOSE 19006
+EXPOSE 60710
 
 # Set the current directory to tap repo
 WORKDIR /$DOC_APP_PATH
