--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "sync-glob": "1.4.0",
     "tap-resolver": "git+https://github.com/simpleviewinc/tap-resolver.git",
     "tree-kill": "1.2.2",
-    "write-yaml-file": "4.0.0"
+    "write-yaml-file": "4.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "jest": "24.8.0",
@@ -98,7 +99,9 @@
       "<rootDir>/src/**/__tests__/**/*.js?(x)",
       "<rootDir>/scripts/**/__tests__/**/*.js?(x)"
     ],
-    "transformIgnorePatterns": [ ".*" ],
+    "transformIgnorePatterns": [
+      ".*"
+    ],
     "collectCoverageFrom": [
       "src/**/*.{js}",
       "!**/__mocks__/**/*.{js}"
