--- a/containers/components/docker-sync.yml
+++ b/containers/components/docker-sync.yml
@@ -7,16 +7,19 @@ options:
 syncs:
   cli-unison-sync:
     src: '${CLI_PATH}'
+    sync_prefer: 'src'
     sync_strategy: 'unison'
     sync_excludes: [ "yarn.lock", "package.lock", 'node_modules', '.git', '.github', '*.md', '.*' ]
     sync_args: '${SYNC_LOGS}-force ${CLI_PATH} -nocreation ${CLI_PATH} -nodeletion ${CLI_PATH} -noupdate ${CLI_PATH}'
   components-unison-sync:
     src: '${COMPONENTS_PATH}'
+    sync_prefer: 'src'
     sync_strategy: 'unison'
     sync_excludes: [ '.npmrc', '.expo', 'node_modules', '.expo-shared', "temp", "yarn.lock", "package.lock", '.git', '.github', '.DS_Store', '*.md', '.*' ]
-    sync_args: '${SYNC_LOGS}-prefer newer'
+    sync_args: '${SYNC_LOGS}'
   retheme-unison-sync:
     src: '${RETHEME_PATH}'
+    sync_prefer: 'src'
     sync_strategy: 'unison'
     sync_excludes: [ '.npmrc', '.expo', 'node_modules', '.expo-shared', "temp", "yarn.lock", "package.lock", '.git', '.github', '.DS_Store', '*.md', '.*' ]
     sync_args: '${SYNC_LOGS}-force ${RETHEME_PATH} -nocreation ${RETHEME_PATH} -nodeletion ${RETHEME_PATH} -noupdate ${RETHEME_PATH}'
