--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
   },
   "dependencies": {
     "app-root-path": "2.2.1",
-    "axios": "^0.19.2",
+    "axios": "0.19.2",
+    "cli-progress": "3.8.2",
+    "cli-spinners": "2.3.0",
     "colors": "1.4.0",
     "inquirer": "7.0.6",
     "jsutils": "git+https://github.com/lancetipton/jsutils.git",
     "load-yaml-file": "0.2.0",
+    "log-update": "4.0.0",
     "module-alias": "2.2.2",
     "recursive-readdir": "2.2.2",
     "rimraf": "2.6.3",
@@ -43,13 +46,13 @@
     "tap-resolver": "git+https://github.com/simpleviewinc/tap-resolver.git",
     "tree-kill": "1.2.2",
     "write-yaml-file": "4.0.0",
-    "yamljs": "^0.3.0"
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
     "jest": "24.8.0",
-    "jest-cli": "^24.8.0",
+    "jest-cli": "24.8.0",
     "jest-html-reporter": "3.1.3",
-    "jest-sonar-reporter": "^2.0.0"
+    "jest-sonar-reporter": "2.0.0"
   },
   "_moduleAliases": {
     "KegConst": "src/constants",
