Updates   * Started a integrating mutagen   * Started a mutagen lib   * Started some root keg tasks   * Added more jsdocs to git lib   * Started a mutagen sync create command

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "KegLog": "src/libs/logger",
     "KegMocks": "src/__mocks__",
     "KegProc": "src/libs/process",
+    "KegMutagen": "src/libs/mutagen",
     "KegPackage": "package.json",
     "KegQuestions": "src/libs/questions",
     "KegRoot": ".",
