Updates   * Changed compose-local to compose-sync     * Now only used in when docker-sync service is started   * Updated context.env files to use COMPOSE_SYNC env

--- a/containers/components/context.env
+++ b/containers/components/context.env
@@ -11,7 +11,7 @@ CONTEXT_ENV_FILE={{ cli.paths.containers }}/components/context.env
 CONTEXT_DOCKER_FILE={{ cli.paths.containers }}/components/Dockerfile
 CONTEXT_ENV_FILE={{ cli.paths.containers }}/components/context.env
 COMPOSE_DEFAULT={{ cli.paths.containers }}/components/compose-default.yml
-COMPOSE_ENV={{ cli.paths.containers }}/components/compose-local.yml
+COMPOSE_SYNC={{ cli.paths.containers }}/components/compose-sync.yml
 
 
 # --- DOCKER ENV CONTEXT --- #
