--- a/containers/core/context.env
+++ b/containers/core/context.env
@@ -11,7 +11,7 @@ CONTEXT_PATH={{ cli.paths.core }}
 CONTEXT_DOCKER_FILE={{ cli.paths.containers }}/core/Dockerfile
 CONTEXT_ENV_FILE={{ cli.paths.containers }}/core/context.env
 COMPOSE_DEFAULT={{ cli.paths.containers }}/core/compose-default.yml
-COMPOSE_ENV={{ cli.paths.containers }}/core/compose-local.yml
+COMPOSE_SYNC={{ cli.paths.containers }}/core/compose-sync.yml
 
 # --- DOCKER ENV CONTEXT --- #
 
