--- a/containers/proxy/context.env
+++ b/containers/proxy/context.env
@@ -2,10 +2,10 @@
 # --- LOCAL ENV CONTEXT --- #
 # Docker data
 COMPOSE_DEFAULT={{ cli.paths.cli }}/containers/proxy/compose-default.yml
-COMPOSE_ENV={{ cli.paths.cli }}/containers/proxy/compose-local.yml
 CONTEXT_PATH={{ cli.paths.proxy }}
 CONTEXT_DOCKER_FILE={{ cli.paths.cli }}/containers/proxy/Dockerfile
 CONTEXT_ENV_FILE={{ cli.paths.cli }}/containers/proxy/context.env
+COMPOSE_SYNC={{ cli.paths.cli }}/containers/proxy/compose-sync.yml
 
 # Should be the keg-proxy github url
 GIT_PROXY_URL=INITIAL
