--- a/containers/tap/context.env
+++ b/containers/tap/context.env
@@ -10,7 +10,7 @@ RESOLVER_PATH={{ cli.paths.resolver }}/src
 CONTEXT_DOCKER_FILE={{ cli.paths.containers }}/tap/Dockerfile
 CONTEXT_ENV_FILE={{ cli.paths.containers }}/tap/context.env
 COMPOSE_DEFAULT={{ cli.paths.containers }}/tap/compose-default.yml
-COMPOSE_ENV={{ cli.paths.containers }}/tap/compose-local.yml
+COMPOSE_SYNC={{ cli.paths.containers }}/tap/compose-sync.yml
 
 # The CONTEXT_PATH env should be the location of the tap being run
 # So it should NOT be set inside the .env file
