Updates   * Added bettern loading of yml and env files from containers folder   * Added custom files to gitignore   * Added some docs on how the files are loaded

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,7 @@ test-report.xml
 # Ingnore docker-sync deamon logs
 .docker-sync
 reports
+
+containers/**/*values*.yml
+!containers/**/values.yml
+containers/**/*.env
