Updates   * Broke the docker start commands into services     * This way the code can be reused for each repo     * Updated keg core to use the services     * Need to update the other repos to do the same - components / taps   * Fixed bug with loading values.yml files     * No longer loaded through the env config option of docker-compose file

--- a/containers/base/values.yml
+++ b/containers/base/values.yml
@@ -4,7 +4,7 @@ env:
 
   CONTEXT_PATH: "{{ cli.paths.cli }}"
   CONTEXT_DOCKER_FILE: "{{ cli.paths.containers }}/base/Dockerfile"
-  CONTEXT_ENV_FILE: "{{ cli.paths.containers }}/base/values.yml"
+  CONTEXT_VALUES_FILE: "{{ cli.paths.containers }}/base/values.yml"
   COMPOSE_DEFAULT: "{{ cli.paths.containers }}/base/compose-default.yml"
 
   # --- DOCKER ENV CONTEXT --- #
