--- a/containers/proxy/values.yml
+++ b/containers/proxy/values.yml
@@ -5,7 +5,7 @@ env:
   CONTEXT_PATH: "{{ cli.paths.proxy }}"
   COMPOSE_DEFAULT: "{{ cli.paths.cli }}/containers/proxy/compose-default.yml"
   CONTEXT_DOCKER_FILE: "{{ cli.paths.cli }}/containers/proxy/Dockerfile"
-  CONTEXT_ENV_FILE: "{{ cli.paths.cli }}/containers/proxy/values.yml"
+  CONTEXT_VALUES_FILE: "{{ cli.paths.cli }}/containers/proxy/values.yml"
   COMPOSE_SYNC: "{{ cli.paths.cli }}/containers/proxy/compose-sync.yml"
 
   # Should be the keg-proxy github url
