--- a/containers/core/values.yml
+++ b/containers/core/values.yml
@@ -10,7 +10,7 @@ env:
   # Docker data
   CONTEXT_PATH: "{{ cli.paths.core }}"
   CONTEXT_DOCKER_FILE: "{{ cli.paths.containers }}/core/Dockerfile"
-  CONTEXT_ENV_FILE: "{{ cli.paths.containers }}/core/values.yml"
+  CONTEXT_VALUES_FILE: "{{ cli.paths.containers }}/core/values.yml"
   COMPOSE_DEFAULT: "{{ cli.paths.containers }}/core/compose-default.yml"
   COMPOSE_SYNC: "{{ cli.paths.containers }}/core/compose-sync.yml"
 
