Updates   * Added default port mapping 80 to the docker app port     * This is only temporary until keg-proxy is setup   * Cleaned up the docker run command   * Got it working properly   * Turned off auto mounting directories   * Updated components directory to set storybook as the default run command   * Added logging to the docker prune task   * Added stdout and stderr methods on the logger task   * Fixed issue with docker volume constants not working for repos not using core   * Added DOC_APP_PORT to values files

--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -16,6 +16,7 @@ env:
   # --- DOCKER ENV CONTEXT --- #
 
   DOC_APP_PATH: /keg/keg-components
+  DOC_APP_PORT: 60710
   DOC_RETHEME_PATH: /keg/keg-components/node_modules/@simpleviewinc/re-theme/build
   NM_CACHE: /keg/nm-cache/keg-components
 
@@ -25,4 +26,3 @@ env:
   IMAGE: kegcomponents
   VERSION: "0.0.1"
   CONTAINER_NAME: kegcomponents
-  STORYBOOK_PORT: "60710"
