--- a/containers/tap/values.yml
+++ b/containers/tap/values.yml
@@ -21,6 +21,7 @@ env:
 
   # Default location of the tap in the docker container
   DOC_APP_PATH: /keg/tap
+  DOC_APP_PORT: 19006
   DOC_CORE_PATH: /keg/tap/node_modules/keg-core
   DOC_COMPONENTS_PATH: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/keg-components/build
   DOC_RETHEME_PATH: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/re-theme/build
