update: - updated mutagen mode to 'one-way-replica' so container doesnt sync over old files

--- a/containers/components/mutagen.yml
+++ b/containers/components/mutagen.yml
@@ -2,7 +2,7 @@ sync:
   kegcomponents:
     alpha: "/keg/keg-components"
     beta: "docker://kegcomponents/keg/keg-components"
-    mode: "two-way-resolved"
+    mode: "one-way-replica"
     ignore:
       vcs: true
       paths:
