--- a/containers/tap/mutagen.yml
+++ b/containers/tap/mutagen.yml
@@ -2,7 +2,7 @@ sync:
   tap:
     alpha: "/keg/tap"
     beta: "docker://tap/keg/tap"
-    mode: "two-way-resolved"
+    mode: "one-way-replica"
     ignore:
       vcs: true
       paths:
