updated node version and setup an env var for node version in each container

--- a/containers/components/Dockerfile
+++ b/containers/components/Dockerfile
@@ -1,5 +1,7 @@
 # Allows overwriting where the base image is pulled from
 # Must come before the FROM directive
+ARG KEG_NODE_VERSION
+ARG GIT_STAGE_IMAGE_FROM=node:$KEG_NODE_VERSION
 ARG KEG_IMAGE_FROM=keg-base:latest
 FROM $KEG_IMAGE_FROM as builder
 
@@ -51,7 +53,7 @@ RUN cd $DOC_APP_PATH; \
 
 # Use a multi stage build for security
 # This is so GIT_KEY is not accessable in the final image
-FROM node:12.8-alpine
+FROM $GIT_STAGE_IMAGE_FROM as gitBuilder
 WORKDIR /
 
 # Path of the keg cli within the docker container
