--- a/containers/core/Dockerfile
+++ b/containers/core/Dockerfile
@@ -1,6 +1,9 @@
 # Allows overwriting where the base image is pulled from
 # Must come before the FROM directive
 ARG KEG_IMAGE_FROM=keg-base:latest
+ARG KEG_NODE_VERSION
+ARG GIT_STAGE_IMAGE_FROM=node:$KEG_NODE_VERSION
+
 FROM $KEG_IMAGE_FROM as builder
 
 WORKDIR /
@@ -46,10 +49,9 @@ RUN cd $DOC_APP_PATH; \
     rm -f .npmrc
 
 # ------- New Build Stage ------- #
-
 # Use a multi stage build for security
 # This is so GIT_KEY is not accessable in the final image
-FROM node:12.8-alpine
+FROM $GIT_STAGE_IMAGE_FROM as gitBuilder
 WORKDIR /
 
 # These args are expected to be set as --build-arg
