--- a/containers/base/Dockerfile
+++ b/containers/base/Dockerfile
@@ -1,4 +1,7 @@
-FROM node:12.13-alpine AS builder
+ARG KEG_NODE_VERSION
+ARG BASE_IMAGE_FROM=node:$KEG_NODE_VERSION
+
+FROM $BASE_IMAGE_FROM AS builder
 
 # These args are expected to be set as --build-arg
 # Which Allow them to be used durring the build
@@ -11,13 +14,13 @@ ARG KEG_COPY_LOCAL
 ARG DOC_CLI_PATH=/keg/keg-cli
 
 # Set the default expojs version to it's locked down
-ARG EXPO_CLI_VERSION="3.22.3"
+ARG KEG_EXPO_CLI_VERSION
 
 WORKDIR /
 
 # Install git and the expo-cli and sharp-cli
 RUN apk add --no-cache git bash; \
-    yarn global add expo-cli@$EXPO_CLI_VERSION sharp-cli nodemon
+    yarn global add expo-cli@$KEG_EXPO_CLI_VERSION sharp-cli nodemon
 
 # Copy over the local keg-components repo to a temp dir
 COPY . /keg-temp/
@@ -40,7 +43,7 @@ COPY . $DOC_CLI_PATH/
 
 # Use a multi stage build for security
 # This is so GIT_KEY is not accessable in the final image
-FROM node:12.13-alpine
+FROM $BASE_IMAGE_FROM AS gitBuilder
 WORKDIR /
 
 # These args are expected to be set as --build-arg
