updated to use defaults.env global file for constants; minor version bump

--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -20,6 +20,9 @@ REGULATOR_PATH={{ cli.paths.regulator }}
 
 # --- EXPO CONTEXT ENVs --- #
 
+# Cli
+EXPO_CLI_VERSION=3.22.3
+
 # Container Ports
 EXPO_DEBUG_PORT=19002
 EXPO_APP_PORT=19006
@@ -42,6 +45,7 @@ GIT_REGULATOR_URL={{ cli.git.orgUrl }}/{{ cli.git.repos.regulator }}.git
 
 # Name of the image used in the FROM directive of the Dockerfile
 KEG_IMAGE_FROM=keg-base:latest
+KEG_NODE_VERSION=12.13-alpine
 
 # Where keg repos are installed on docker container
 DOC_CLI_PATH=/keg/keg-cli
