Updates * Added getServiceName helper   * Gets the docker-compose service name from the docker-compose file * Updated GIT_TAP_URL to be GIT_APP_URL   * Makes more sense with injected apps * Normalized getting the docker compose service name   * Updated all docker-compose tasks to get the service name in the same way   * Added KEG_COMPOSE_SERVICE env     * Gets injected into external apps     * Pulled from the container context for internal apps

--- a/containers/tap/docker-compose.yml
+++ b/containers/tap/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         - GIT_KEY
         - GIT_RETHEME_URL
         - GIT_RESOLVER_URL
-        - GIT_TAP_URL
+        - GIT_APP_URL
         - KEG_IMAGE_FROM
         - KEG_EXEC_CMD
         - KEG_NM_INSTALL
@@ -42,7 +42,7 @@ services:
       - GIT_COMPONENTS_URL
       - GIT_RETHEME_URL
       - GIT_RESOLVER_URL
-      - GIT_TAP_URL
+      - GIT_APP_URL
       - KEG_EXEC_CMD
       - KEG_NM_INSTALL
       - NODE_ENV
