--- a/containers/core/docker-compose.yml
+++ b/containers/core/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         - GIT_KEY
         - GIT_RETHEME_URL
         - GIT_RESOLVER_URL
-        - GIT_TAP_URL
+        - GIT_APP_URL
         - KEG_IMAGE_FROM
         - KEG_EXEC_CMD
         - KEG_NM_INSTALL
@@ -41,7 +41,7 @@ services:
       - GIT_COMPONENTS_URL
       - GIT_RETHEME_URL
       - GIT_RESOLVER_URL
-      - GIT_TAP_URL
+      - GIT_APP_URL
       - KEG_IMAGE_FROM
       - KEG_EXEC_CMD
       - KEG_CORE_PROGRESS
