Upgraded Expo-CLI (#9)
Co-authored-by: Lance Tipton <lancetipton04@gmail.com>

--- a/containers/base/Dockerfile
+++ b/containers/base/Dockerfile
@@ -1,4 +1,7 @@
-FROM node:12.8-alpine AS builder
+ARG KEG_NODE_VERSION
+ARG BASE_IMAGE_FROM=node:$KEG_NODE_VERSION
+
+FROM $BASE_IMAGE_FROM AS builder
 
 # These args are expected to be set as --build-arg
 # Which Allow them to be used durring the build
@@ -11,7 +14,7 @@ ARG KEG_COPY_LOCAL
 ARG DOC_CLI_PATH=/keg/keg-cli
 
 # Set the default expojs version to it's locked down
-ARG EXPO_CLI_VERSION="3.21.3"
+ARG EXPO_CLI_VERSION
 
 WORKDIR /
 
@@ -40,7 +43,7 @@ COPY . $DOC_CLI_PATH/
 
 # Use a multi stage build for security
 # This is so GIT_KEY is not accessable in the final image
-FROM node:12.8-alpine
+FROM $BASE_IMAGE_FROM AS gitBuilder
 WORKDIR /
 
 # These args are expected to be set as --build-arg
