--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Lance Tipton",
   "license": "MIT",
   "bin": {
-    "keg": "./keg"
+    "keg": "./keg",
+    "keg-cli": "./keg-cli"
   },
   "files": [
     "./keg",
