Updates   * Removed CONTAINERS_PATH in a few places     * This can cause issues when using injected apps   * Added check to see if the container exists in CONTAINERS when getting the kegContext   * export service args helper from utils/services   * Added run task to taps, to allow running an injected app through the keg docker image run command   * Added KEG_MUTAGEN_PATH env   * Changed node version requirment in package.json

--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -9,6 +9,8 @@ env:
 
   KEG_DOCKER_FILE: "{{ cli.paths.containers }}/components/Dockerfile"
   KEG_VALUES_FILE: "{{ cli.paths.containers }}/components/values.yml"
+  KEG_MUTAGEN_PATH: "{{ cli.paths.containers }}/components/mutagen.yml"
+  
   # The default docker-compose file path
   KEG_COMPOSE_DEFAULT: "{{ cli.paths.containers }}/components/docker-compose.yml"
   # Can also define other an override compose files
