--- a/containers/regulator/values.yml
+++ b/containers/regulator/values.yml
@@ -6,6 +6,7 @@ env:
   # Docker / Docker Compose paths
   KEG_DOCKER_FILE: "{{ cli.paths.containers }}/regulator/Dockerfile"
   KEG_VALUES_FILE: "{{ cli.paths.containers }}/regulator/values.yml"
+  KEG_MUTAGEN_PATH: "{{ cli.paths.containers }}/regulator/mutagen.yml"
 
   # The default docker-compose file path
   KEG_COMPOSE_DEFAULT: "{{ cli.paths.containers }}/regulator/docker-compose.yml"
