Updates   * Updated run.sh file to add the .npmrc before running yarn install   * Minor updates to taps default arguments   * Added bash to containers     * Remove bask from base builder step  * Added keg base tasks to build and remove base image

--- a/containers/base/Dockerfile
+++ b/containers/base/Dockerfile
@@ -19,7 +19,7 @@ ARG EXPO_CLI_VERSION
 WORKDIR /
 
 # Install git and the expo-cli and sharp-cli
-RUN apk add --no-cache git bash; \
+RUN apk add --no-cache git; \
     yarn global add expo-cli@$EXPO_CLI_VERSION sharp-cli nodemon
 
 # Copy over the local keg-components repo to a temp dir
