--- a/containers/components/Dockerfile
+++ b/containers/components/Dockerfile
@@ -73,7 +73,7 @@ ENV REACT_NATIVE_PACKAGER_HOSTNAME $KEG_DOCKER_IP
 ENV GIT_KEY=""
 
 # Install git for the new stage
-RUN apk add --no-cache git
+RUN apk add --no-cache git bash
 
 # RUN mv /etc/profile.d/color_prompt /etc/profile.d/color_prompt.sh
 
@@ -100,4 +100,4 @@ WORKDIR /$DOC_APP_PATH
 
 # Run the start script
 # Dont use the array syntax, so we have access to the DOC_CLI_PATH ENV
-CMD /bin/sh $DOC_CLI_PATH/containers/components/run.sh
+CMD /bin/bash $DOC_CLI_PATH/containers/components/run.sh
