Updates   * Added a KEG_CONFIG_PATH to store the location of the .kegConfig folder     * This needs to be dynamic to allow loading into a docker container

--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -13,6 +13,7 @@ CLI_PATH={{ cli.paths.cli }}
 CORE_PATH={{ cli.paths.core }}
 CONTAINERS_PATH={{ cli.paths.containers }}
 COMPONENTS_PATH={{ cli.paths.components }}
+KEG_CONFIG_PATH={{ cli.paths.kegConfig }}
 RETHEME_PATH={{ cli.paths.retheme }}
 RESOLVER_PATH={{ cli.paths.resolver }}
 PROXY_PATH={{ cli.paths.proxy }}
