Updates   * Added loading the constants in the very beginning   * Added defaultEnv cli config setting   * Added globalOptions object     * These options get added to every task       * Only includes env right now   * Added helper to load the default env setting     * Defaults to globalConfig setting   * Updated params parsing to always map the env option   * Minor code formatting clean up   * Cleaned up map env helper   * Changed builtTaskAlias to buildTaskData, because it now adds the global options as well   * Cleaned up the initialize tasks helper

--- a/scripts/setup/cli.config.json
+++ b/scripts/setup/cli.config.json
@@ -30,6 +30,7 @@
       }
     },
     "settings": {
+      "defaultEnv": "development",
       "docker": {
         "preConfirm": true,
         "buildKit": true,
