Updates   * Added better handeling for getting prefixes   * Fixed bug when removing image on destroy task   * Added a lot of helpers to regulator values file     * Need to make these dynamic   * Put keg-regulator compose services in one file     * Need to clean this up more

--- a/containers/regulator/values.yml
+++ b/containers/regulator/values.yml
@@ -28,6 +28,19 @@ env:
   DOC_STEPS_PATH: /keg/keg-regulator/tests/steps
   HUB_HOST: selenium-hub
   HUB_PORT: 4444
+  SELENIUM_VERSION: 3.141.59-20200525
+  # SELENIUM_VERSION: 3.141.59-zirconium
+  WINDOW_WIDTH: 1280
+  WINDOW_HEIGHT: 720
+
+  CHROME_PORT: 5555
+  DOC_CHROME_PORT: 5555
+  CHROME_VNC_PORT: 5900
+
+  FIREFOX_PORT: 5556
+  DOC_FIREFOX_PORT: 5556
+  FIREFOX_VNC_PORT: 5901
+  DOC_FIREFOX_VNC_PORT: 5900
 
   # --- GENERAL CONTEXT ENVs --- #
 
