--- a/containers/regulator/docker-compose.yml
+++ b/containers/regulator/docker-compose.yml
@@ -38,3 +38,44 @@ services:
       - "chrome"
       - "firefox"
   
+  selenium-hub:
+    image: selenium/hub:${SELENIUM_VERSION}
+    container_name: selenium-hub
+    ports:
+      - "4444:4444"
+
+  chrome:
+    image: selenium/node-chrome-debug:${SELENIUM_VERSION}
+    # image: selenium/node-chrome:${SELENIUM_VERSION}
+    container_name: 'selenium-chrome'
+    volumes:
+      - /dev/shm:/dev/shm
+    depends_on:
+      - selenium-hub
+    environment:
+      - HUB_HOST=selenium-hub
+      - HUB_PORT=4444
+      - VNC_NO_PASSWORD=1
+      - WINDOW_HEIGHT
+      - WINDOW_WIDTH
+    ports:
+      - ${CHROME_PORT}:${DOC_CHROME_PORT}
+      - ${CHROME_VNC_PORT}:${CHROME_VNC_PORT}
+
+  firefox:
+    image: selenium/node-firefox-debug:${SELENIUM_VERSION}
+    # image: selenium/node-firefox:${SELENIUM_VERSION}
+    container_name: 'selenium-firefox'
+    volumes:
+      - /dev/shm:/dev/shm
+    depends_on:
+      - selenium-hub
+    environment:
+      - HUB_HOST=selenium-hub
+      - HUB_PORT=4444
+      - VNC_NO_PASSWORD=1
+      - WINDOW_HEIGHT
+      - WINDOW_WIDTH
+    ports:
+      - ${FIREFOX_PORT}:${DOC_FIREFOX_PORT}
+      - ${FIREFOX_VNC_PORT}:${DOC_FIREFOX_VNC_PORT}
