Updates   * Updated syncs to run in series   * Updated getMutagenConfig helper to load the full config or just the passed in path   * Added helpers for getting dependency paths local and remote   * Added syncActionService to run sync actions defined in the mutagen.yml   * Updated docker.container.exec to accept more arguments

--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -9,6 +9,9 @@ env:
 
   KEG_DOCKER_FILE: "{{ cli.paths.containers }}/components/Dockerfile"
   KEG_VALUES_FILE: "{{ cli.paths.containers }}/components/values.yml"
+
+  # Defines the location of the mutagen config
+  # Without it, mutagen syncs will use the default settings
   KEG_MUTAGEN_PATH: "{{ cli.paths.containers }}/components/mutagen.yml"
   
   # The default docker-compose file path
@@ -22,8 +25,16 @@ env:
 
   # --- DOCKER ENV CONTEXT --- #
 
+  # Location of the application within the docker container
+  # Defines the WORKDIR within the Dockerfile and docker-compose.yml
   DOC_APP_PATH: /keg/keg-components
+
+  # Port the application will use when running
+  # Will be bound to port 80 of the local host
   DOC_APP_PORT: 60710
+  
+  # Defines the location in a docker container for a dependency
+  # This allows mutagen to know where to sync the local version of the dependency
   DOC_RETHEME_PATH: /keg/keg-components/node_modules/@simpleviewinc/re-theme
 
   # --- GENERAL CONTEXT ENVs --- #
