Updates   * Got sync actions to work as detached   * Added options to only run specified sync action   * Changed config for sync action to be an object instead of array   * Added code to parse passed in sync dependecy and action

--- a/containers/components/mutagen.yml
+++ b/containers/components/mutagen.yml
@@ -6,7 +6,7 @@ sync:
     ignore:
       vcs: true
       paths:
-        - "/node_modules"
+        - "node_modules"
         - "/core/base/assets/*"
         - "/.*"
         - "!/.storybook"
@@ -20,6 +20,14 @@ sync:
         - "/docs"
 actions:
   retheme:
-    - "cd /keg/keg-components/node_modules/@simpleviewinc/re-theme"
-    - "yarn install"
-    - "yarn dev"
+    install:
+      location: "/keg/keg-components/node_modules/@simpleviewinc/re-theme"
+      privileged: true
+      cmds:
+        - "yarn install"
+    start:
+      location: "/keg/keg-components/node_modules/@simpleviewinc/re-theme"
+      privileged: true
+      detach: true
+      cmds:
+        - "yarn dev"
