Updates   * Updated to use argsParse to parse passed in task options

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "view:reports": "open reports/coverage/lcov-report/index.html"
   },
   "dependencies": {
+    "@ltipton/args-parse": "^1.0.0",
     "@ltipton/jsutils": "^5.0.0",
     "askIt": "git+https://github.com/lancetipton/askIt.git",
     "axios": "0.19.2",
