Updates   * Added sync actions for retheme in core   * Added CHOKIDAR_USEPOLLING, which seems to fix the max watch issue when combined with Dockerfile changes   * Updated Dockerfile to fix the max file watchers within the container   * Added sync action for core inside a tap container

--- a/containers/core/docker-compose.yml
+++ b/containers/core/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - KEG_CORE_PROGRESS
       - KEG_NM_INSTALL
       - NODE_ENV
+      - CHOKIDAR_USEPOLLING=1
     ports:
       - ${EXPO_DEBUG_PORT}:${EXPO_DEBUG_PORT}
       - 80:${DOC_APP_PORT}
