--- a/containers/core/values.yml
+++ b/containers/core/values.yml
@@ -29,13 +29,14 @@ env:
   DOC_COMPONENTS_PATH: "/keg/keg-core/node_modules/@simpleviewinc/keg-components"
   DOC_RETHEME_PATH: "/keg/keg-core/node_modules/@simpleviewinc/re-theme"
   DOC_RESOLVER_PATH: "/keg/keg-core/node_modules/@simpleviewinc/tap-resolver"
-
+  
   # --- GENERAL CONTEXT ENVs --- #
 
   # Image Build information
   IMAGE: "keg-core"
   VERSION: "0.0.1"
   CONTAINER_NAME: "keg-core"
+  CHOKIDAR_USEPOLLING: 1
 
   # --- Override the default progress output for expo-webpack in keg-core --- #
   KEG_CORE_PROGRESS: true
