--- a/containers/tap/mutagen.yml
+++ b/containers/tap/mutagen.yml
@@ -18,3 +18,9 @@ sync:
         - "/reports"
         - "/build"
         - "/docs"
+actions:
+  core:
+    install: 
+      location: /keg/tap/node_modules/keg-core
+      cmds:
+        - yarn install
