Updates   * Added sync actions to tap and core   * Added fixes for max-file watchers in tap Dockerfile   * Updated syncActionService to accept an array of actions to run     * Are run in the order defined in the passed in argument   * Added default .npmrc with key from keg-public

--- a/containers/tap/docker-compose.yml
+++ b/containers/tap/docker-compose.yml
@@ -29,6 +29,7 @@ services:
         - TAP
     container_name: ${CONTAINER_NAME}
     environment:
+      - CHOKIDAR_USEPOLLING
       - DOC_APP_PATH
       - DOC_CLI_PATH
       - DOC_CORE_PATH
