--- a/containers/components/docker-compose.yml
+++ b/containers/components/docker-compose.yml
@@ -15,6 +15,7 @@ services:
         - KEG_IMAGE_FROM
     container_name: ${CONTAINER_NAME}
     environment:
+      - CHOKIDAR_USEPOLLING
       - DOC_APP_PATH
       - DOC_CLI_PATH
       - DOC_COMPONENTS_PATH
