--- a/containers/core/docker-compose.yml
+++ b/containers/core/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         - NODE_ENV
     container_name: ${CONTAINER_NAME}
     environment:
+      - CHOKIDAR_USEPOLLING
       - DOC_APP_PATH
       - DOC_CLI_PATH
       - DOC_CORE_PATH
@@ -45,7 +46,6 @@ services:
       - KEG_CORE_PROGRESS
       - KEG_NM_INSTALL
       - NODE_ENV
-      - CHOKIDAR_USEPOLLING=1
     ports:
       - ${EXPO_DEBUG_PORT}:${EXPO_DEBUG_PORT}
       - 80:${DOC_APP_PORT}
