--- a/containers/core/mutagen.yml
+++ b/containers/core/mutagen.yml
@@ -20,11 +20,36 @@ sync:
         - "/docs"
 actions:
   retheme:
-    install: 
+    install:
       location: /keg/keg-core/node_modules/@simpleviewinc/re-theme
+      privileged: true
       cmds:
         - yarn install
+    build:
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/re-theme
+      privileged: true
+      cmds:
+        - yarn build
     start:
       location: /keg/keg-core/node_modules/@simpleviewinc/re-theme
+      privileged: true
+      detach: true
+      cmds:
+        - yarn dev
+  components:
+    install: 
+      location: /keg/keg-core/node_modules/@simpleviewinc/keg-components
+      privileged: true
+      cmds:
+        - yarn install
+    build:
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/keg-components
+      privileged: true
+      cmds:
+        - yarn build
+    start:
+      location: /keg/keg-core/node_modules/@simpleviewinc/keg-components
+      privileged: true
+      detach: true
       cmds:
         - yarn dev
