--- a/containers/tap/mutagen.yml
+++ b/containers/tap/mutagen.yml
@@ -6,7 +6,7 @@ sync:
     ignore:
       vcs: true
       paths:
-        - "/node_modules"
+        - "node_modules"
         - "/core/base/assets/*"
         - "/.*"
         - "!/.storybook"
@@ -22,5 +22,40 @@ actions:
   core:
     install: 
       location: /keg/tap/node_modules/keg-core
+      privileged: true
       cmds:
         - yarn install
+  retheme:
+    install: 
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/re-theme
+      privileged: true
+      cmds:
+        - yarn install
+    build:
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/re-theme
+      privileged: true
+      cmds:
+        - yarn build
+    start:
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/re-theme
+      privileged: true
+      detach: true
+      cmds:
+        - yarn dev
+  components:
+    install: 
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/keg-components
+      privileged: true
+      cmds:
+        - yarn install
+    build:
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/keg-components
+      privileged: true
+      cmds:
+        - yarn build
+    start:
+      location: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/keg-components
+      privileged: true
+      detach: true
+      cmds:
+        - yarn dev
