--- a/containers/tap/values.yml
+++ b/containers/tap/values.yml
@@ -41,6 +41,7 @@ env:
   IMAGE: tap
   VERSION: "0.0.1"
   CONTAINER_NAME: tap
+  CHOKIDAR_USEPOLLING: 1
 
   # Git tap url in github
   GIT_APP_URL: INITIAL
